[gd_scene load_steps=3 format=3 uid="uid://cfs088008gjbq"]

[ext_resource type="Script" uid="uid://dymkrh5mch2am" path="res://olivia/scripts/starting_dialogue.gd" id="1_g05iw"]
[ext_resource type="FontFile" uid="uid://rdldim0q2d46" path="res://olivia/assets/Kenney Future Narrow.ttf" id="2_8u4s1"]

[node name="Starting Dialogue" type="Node2D"]
position = Vector2(3, -24)
script = ExtResource("1_g05iw")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UhOh" type="Label" parent="."]
offset_left = 50.0
offset_top = 6.0
offset_right = 124.0
offset_bottom = 33.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0.788235, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.788235, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8u4s1")
theme_override_font_sizes/font_size = 24
text = "Uh oh"

[node name="BottleFloor" type="Label" parent="."]
offset_left = 7.0
offset_top = 1.0
offset_right = 357.0
offset_bottom = 58.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8u4s1")
theme_override_font_sizes/font_size = 24
text = "Looks like I left a bottle on the floor"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Recycling" type="Label" parent="."]
offset_left = 27.0
offset_top = 1.0
offset_right = 260.0
offset_bottom = 58.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8u4s1")
theme_override_font_sizes/font_size = 24
text = "Better take it to recycling..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Welcome" type="Label" parent="."]
offset_left = 10.0
offset_top = 6.0
offset_right = 351.0
offset_bottom = 33.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8u4s1")
theme_override_font_sizes/font_size = 24
text = "Welcome to my bedroom!"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
